# hikki

./: .gitignore  Cargo.toml  README.md  промт.txt
benches/: inference.rs
configs/: fast.toml  hikki.toml  medium.toml  small.toml  small_v2.toml  tiny_improved.toml  tinystories.toml
scripts/: download_data.ps1  download_tinystories.sh  make_debug_data.py  prepare_data.ps1  prepare_data.sh
src/: config.rs  lib.rs  main.rs
src/cuda/: kernels.cu  mod.rs
src/data/: dataset.rs  loader.rs  mod.rs
src/inference/: engine.rs  sampler.rs
src/model/: embedding.rs  lm.rs  mod.rs  rwkv_block.rs  ssm.rs
src/tensor/: autograd.rs  mod.rs  ops.rs
src/tokenizer/: bpe.rs  mod.rs  vocab.rs
src/training/: loss.rs  mod.rs  optimizer.rs  scheduler.rs  trainer.rs
