[package]
name = "fastmind-lm"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.8.0"
memmap2 = "0.9.3"
clap = { version = "4.4.11", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
num_cpus = "1.16"
matrixmultiply = "0.3"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "inference"
harness = false
